--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
+    "framer-motion": "^10.16.16",
+    "gsap": "^3.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.1",
-    "axios": "^1.6.2",
-    "framer-motion": "^10.16.16",
-    "gsap": "^3.12.4"
+    "three": "^0.181.1"
   },
   "scripts": {
     "start": "react-scripts start",
