--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,11 +12,12 @@
       "dest": "server.js"
     },
     {
+      "src": "/api/(.*)",
+      "dest": "server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
