--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=your-backend-url-here
-REACT_APP_SOCKET_URL=your-backend-url-here
+REACT_APP_API_URL=https://chat-app-sigma-hazel-97.vercel.app
+REACT_APP_SOCKET_URL=https://chat-app-sigma-hazel-97.vercel.app
